<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wedge Companion</string>
    <string name="action_settings">Paramètres</string>
    <string name="title_activity_settings">Paramètres</string>
    <string name="title_det_dmg">Détail des dégâts</string>
    <string name="pref_header_general">Caractéristiques générales</string>

    <string name="jet_att">Valeur d\'attaque de base</string>
    <string name="jet_att_def">17,12,7,2</string>
    <string name="title_ability_dexterite">Modificateur de dextérité</string>

    <!-- arme  -->
    <string name="thor">Puissance de Thor</string>
    <string name="thor_summ">Enchantement de Thor (altération +3)</string>

    <string name="rapid_enchant">Enchantement rapidité</string>
    <string name="rapid_enchant_summ">Procure une attaque supplémentaire</string>
    <string name="composite">Arc composite +4</string>
    <string name="composite_summ">+4 aux dégâts (Req. +4 For)</string>
    <string name="attack_att_epic">Point(s) d\'attaque épique</string>
    <string name="epic_dmg_val">Point(s) de dégât épique</string>
    <string name="prouesse_val">Point(s) de prouesse</string>

    <string-array name="choix_prouesse">
        <item>1 ière attaque</item>
        <item>2 ième attaque</item>
        <item>3 ième attaque</item>
        <item>4 ième attaque</item>
    </string-array>
    <string-array name="choix_prouesse_val">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <!-- dons combats  -->
    <string name="pref_header_combat">Aptitudes de combat</string>
    <string name="predil">Arme de prédilection</string>
    <string name="predil_summ">+1 à tous ses jets d\'attaque avec l\'arme choisie.</string>
    <string name="predil_sup">Arme de prédilection sup.</string>
    <string name="predil_sup_summ">+1 à tous ses jets d\'attaque avec l\'arme choisie.</string>
    <string name="weapon_spe">Spécialisation martiale</string>
    <string name="weapon_spe_summ">Le personnage obtient un bonus de +2 sur les jets de dégâts de l’arme choisie.</string>
    <string name="weapon_spe_sup">Spécialisation martiale supérieure</string>
    <string name="weapon_spe_sup_summ">Le personnage obtient un bonus de +2 sur les jets de dégâts de l’arme choisie.</string>
    <string name="improved_crit_summ">La zone de critique de l’arme choisie est doublée.</string>
    <string name="improved_crit">Science du critique</string>
    <string name="neuf_m">Tir à bout portant</string>
    <string name="neuf_m_summ">Quand une cible est à moins de 9m \n +1 au jet d\'attaque et de dégât.</string>
    <string name="tir_rapide">Tir rapide</string>
    <string name="tir_rapide_summ">Une attaque à distance supplémentaire.\n-2 aux jets d\'attaques du round.</string>
    <string name="viser">Viser</string>
    <string name="viser_summ">-x aux jets d\'attaques / +2x aux dégâts</string>
    <string name="viser_val">Valeur du malus</string>

    <!-- Feat autre soon  -->
    <string name="hammer_gap_summ">Chaque coup successif augemente les dégats</string>
    <string name="hammer_gap">Marteler la faille</string>

    <!--Epic  -->
    <string name="predil_epic">Arme de prédilection épique</string>
    <string name="predil_epic_summ">+2 à tous ses jets d\'attaque avec l\'arme choisie.</string>
    <string name="feu_nourri">Feu nourri suprême</string>
    <string name="feu_nourri_summ">x flêches par attaque (une seule crit).</string>
    <string name="multi_value">Nombre de flêches par attaque</string>

    <string name="weapon_spe_epic_summ">Le personnage obtient un bonus de +4 sur les jets de dégâts de l’arme choisie.</string>
    <string name="weapon_spe_epic">Spécialisation martiale épique</string>

    <!-- Mythic -->
    <string name="chance">Il y a toujours une chance</string>
    <string name="chance_summ">Le personnage ne rate plus automatiquement lorsqu’il obtient un 1 aux jets d’attaque.</string>
    <string name="crit_science_myth">Science du critique (mythique)</string>
    <string name="crit_science_myth_summ">Le multiplicateur de critique que le personnage applique lorsqu’il manipule l’arme choisie augmente de 1.</string>
    <string name="barrage_shot">Tir de barrage</string>
    <string name="barrage_shot_summ">En dépenssant un point mythique par une action rapide effectue une attaque à distance. Cette attaque vient en plus de celles effectuées au cours du même round. Lorsqu’il effectue cette attaque, le personnage ignore l’abri et le camouflage dont bénéficie la cible et il ajoute son grade au jet d’attaque. Les dégâts de cette attaque ignorent toutes les réductions de dégâts.</string>



    <!-- ENCHANTS -->
    <string name="pref_header_enchant">Enchantements</string>


    <string name="magic">Flêche magique</string>
    <string name="magic_summ">Chaque flêche tirée par l\'archer sylvestre a un bonus d\'altération magique.</string>
    <string name="magic_val">Valeur de l\'altération</string>
    <string name="feu">Feu intense</string>
    <string name="feu_summ">+2d6 dégâts de feu. +2d10 en critique</string>
    <string name="foudre">Foudre intense</string>
    <string name="foudre_summ">+2d6 dégâts de foudre. +2d10 en critique</string>
    <string name="froid">Froid intense</string>
    <string name="froid_summ">+2d6 dégâts de froid. +2d10 en critique</string>


    <!-- BUFF -->
    <string name="pref_header_temp">Augmentations temporaires</string>
    <string name="att_buff">Augmentation d\'attaque</string>
    <string name="dmg_buff">Augmentation de dégât</string>


    <!-- autre -->



    <string-array name="slot_choice_val">
        <item>eyes_slot</item>
        <item>shoulder_slot</item>
        <item>hand_slot</item>
        <item>ring1_slot</item>
        <item>mainhand_slot</item>
        <item>helm_slot</item>
        <item>neck_slot</item>
        <item>armor_slot</item>
        <item>belt_slot</item>
        <item>feet_slot</item>
        <item>face_slot</item>
        <item>chest_slot</item>
        <item>wrist_slot</item>
        <item>ring2_slot</item>
        <item>offhand_slot</item>
        <item>other_slot</item>
    </string-array>
    <string-array name="slot_choice_name">
        <item>Yeux</item>
        <item>Epaules</item>
        <item>Mains</item>
        <item>Anneau 1</item>
        <item>Main principale</item>
        <item>Casque</item>
        <item>Cou</item>
        <item>Armure</item>
        <item>Ceinture</item>
        <item>Pieds</item>
        <item>Visage</item>
        <item>Corps</item>
        <item>Poignets</item>
        <item>Anneau 2</item>
        <item>Main secondaire</item>
        <item>Hors emplacement</item>
    </string-array>


    <!-- Stats -->
    <string-array name="stat_bin">
        <item>10</item>
        <item>25</item>
        <item>50</item>
        <item>100</item>
    </string-array>


    <!-- companion -->

    <string name="quadrantGeneralTitle">Caractéristiques</string>

    <string name="quadrantQ1Title">Caractéristiques de base</string>
    <string name="quadrantQ2Title">Ressources</string>
    <string name="quadrantQ3Title">Caractéristiques défensives</string>
    <string name="quadrantQ4Title">Caractéristiques avancées</string>

    <string name="skill_mastery">Rang de maîtrise</string>
    <string name="skill_bonus">Bonus divers</string>

    <string name="feat_active">Actif</string>
    <string name="feat_atk">Attaque</string>
    <string name="feat_def">Défense</string>
    <string name="feat_other">Autre</string>

</resources>