<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="predil"
        android:summary="@string/predil_summ"
        android:title="@string/predil" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="neuf_m"
        android:summary="@string/neuf_m_summ"
        android:title="@string/neuf_m" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="tir_rapide"
        android:summary="@string/tir_rapide_summ"
        android:title="@string/tir_rapide" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="viser"
        android:summary="@string/viser_summ"
        android:title="@string/viser" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="feu_nourri"
        android:summary="@string/feu_nourri_summ"
        android:title="@string/feu_nourri" />
</PreferenceScreen>
