<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="@bool/magic_switch_def"
        android:key="magic_switch"
        android:summary="@string/magic_summ"
        android:title="@string/magic" />
    <stellarnear.wedge_companion.EditTextPreference
        android:defaultValue="@integer/magic_val_def"
        android:dependency="magic_switch"
        android:key="magic_val"
        android:title="@string/magic_val"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:singleLine="true"
        android:summary="Valeur : %s"/>
    <SwitchPreference
        android:defaultValue="@bool/feu_intense_switch_def"
        android:key="feu_intense_switch"
        android:summary="@string/feu_summ"
        android:title="@string/feu" />
    <SwitchPreference
        android:defaultValue="@bool/foudre_intense_switch_def"
        android:key="foudre_intense_switch"
        android:summary="@string/foudre_summ"
        android:title="@string/foudre" />
    <SwitchPreference
        android:defaultValue="@bool/froid_intense_switch_def"
        android:key="froid_intense_switch"
        android:summary="@string/froid_summ"
        android:title="@string/froid" />
</PreferenceScreen>