<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <SwitchPreference
            android:defaultValue="@bool/thor_switch_def"
            android:key="thor_switch"
            android:summary="@string/thor_summ"
            android:title="@string/thor" />

        <SwitchPreference
            android:defaultValue="@bool/rapid_enchant_switch_def"
            android:elegantTextHeight="false"
            android:fadeScrollbars="false"
            android:key="rapid_enchant_switch"
            android:summary="@string/rapid_enchant_summ"
            android:title="@string/rapid_enchant" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="composite_switch"
            android:summary="@string/composite_summ"
            android:title="@string/composite" />

        <SwitchPreference
            android:defaultValue="@bool/feu_intense_switch_def"
            android:key="feu_intense_switch"
            android:summary="@string/feu_summ"
            android:title="@string/feu" />
        <SwitchPreference
            android:defaultValue="@bool/foudre_intense_switch_def"
            android:key="foudre_intense_switch"
            android:summary="@string/foudre_summ"
            android:title="@string/foudre" />
        <SwitchPreference
            android:defaultValue="@bool/froid_intense_switch_def"
            android:key="froid_intense_switch"
            android:summary="@string/froid_summ"
            android:title="@string/froid" />
        <Preference  android:layout="@layout/divider_pref" android:selectable="false"/>

        <PreferenceCategory android:title="Objet légendaire"/>
        <Preference  android:layout="@layout/divider_pref" android:selectable="false"/>

        <stellarnear.wedge_companion.EditTextPreference
            android:defaultValue="@integer/resource_legendary_points_def"
            android:key="resource_legendary_points"
            android:title="Points légendaires"
            android:singleLine="true"
            android:inputType="number"
            android:summary="Valeur : %s"/>

        <stellarnear.wedge_companion.EditTextPreference
            android:defaultValue="@integer/legendary_dice_def"
            android:key="legendary_dice"
            android:title="Dès de montée en puissance"
            android:singleLine="true"
            android:inputType="number"
            android:summary="Valeur : d%s"/>

</PreferenceScreen>