<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="pathfinder.pathfinder_dealer.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_person_pin_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="pathfinder.pathfinder_dealer.SettingsActivity$CombatPreferenceFragment"
        android:icon="@drawable/ic_playlist_add_check_black_24dp"
        android:title="@string/pref_header_combat" />

    <header
        android:fragment="pathfinder.pathfinder_dealer.SettingsActivity$EnchantPreferenceFragment"
        android:icon="@drawable/ic_whatshot_black_24dp"
        android:title="@string/pref_header_enchant" />

    <header
        android:fragment="pathfinder.pathfinder_dealer.SettingsActivity$IsilliritPreferenceFragment"
        android:icon="@drawable/ic_quiver"
        android:title="@string/isillirit" />

    <header
        android:fragment="pathfinder.pathfinder_dealer.SettingsActivity$TempPreferenceFragment"
        android:icon="@drawable/ic_timelapse_black_24dp"
        android:title="@string/pref_header_temp" />


</preference-headers>
